Bug 479547 - resizing videos/windows that keep their aspect ratio can make them disappear
Summary: resizing videos/windows that keep their aspect ratio can make them disappear
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.0.2
Platform: Fedora RPMs Linux
: NOR major
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-01-08 19:49 UTC by renner0
Modified: 2026-08-12 23:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.8.0
Sentry Crash Report:


Attachments
video showing how to resize a video so you can't see it anymore (1.36 MB, video/x-matroska)
2024-01-08 19:49 UTC, renner0
Details

Note You need to log in before you can comment on or make changes to this bug.
Description renner0 2024-01-08 19:49:33 UTC
Created attachment 164759 [details]
video showing how to resize a video so you can't see it anymore

SUMMARY
If you resize a partially hidden video With Meta+ Right Mouse Click near the edge of a screen and make it smaller it disappears. It's not even shown in overview


STEPS TO REPRODUCE
1. open video
2. position it with Meta+ Left Mouse Click so that only a tiny sliver is visible at the top of the screen
3. shrink the window with Meta+Right Mouse Click

OBSERVED RESULT
Window does not show up in overview

EXPECTED RESULT
Shows up in overview

Linux/KDE Plasma: Fedora Kinoite 39
KDE Plasma Version: 5.27.10
KDE Frameworks Version: 5.111.0
Qt Version: 5.15.11

ADDITIONAL INFORMATION
I mean to be fair you have to go out of your way to achieve this.
Comment 1 renner0 2024-03-24 20:40:18 UTC
This is still happening in Plasma 6

Operating System: Fedora Linux 40 Kinoite
KDE Plasma Version: 6.0.2
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.8.1-300.fc40.x86_64 (64-bit)
Graphics Platform: Wayland
Comment 2 renner0 2026-05-30 13:20:04 UTC
Seems like a duplicate of https://bugs.kde.org/show_bug.cgi?id=495635
Comment 3 Bug Janitor Service 2026-07-27 09:01:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/9650
Comment 4 Bug Janitor Service 2026-08-12 08:54:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/9727
Comment 5 Vlad Zahorodnii 2026-08-12 13:03:33 UTC
Git commit 18b044c2bd244ee3e7a6f734c1e7fb10a97ac7d5 by Vlad Zahorodnii.
Committed on 12/08/2026 at 11:54.
Pushed by vladz into branch 'master'.

Confine xdg-toplevel surfaces when the window geometry changes

The compositor doesn't know about the aspect ratio of the xdg-toplevel
surface. During interactive resize, it can happen that the window ends
up completely offscreen after applying aspect ratio constraints.

This change prevents the window from ending up offscreen. It's possible
to do with unrestricted resize though.

M  +12   -0    src/xdgshellwindow.cpp
M  +1    -0    src/xdgshellwindow.h

https://invent.kde.org/plasma/kwin/-/commit/18b044c2bd244ee3e7a6f734c1e7fb10a97ac7d5