Confine xdg-toplevel surfaces when the window geometry changes

The compositor doesn't know about the aspect ratio of the xdg-toplevel
surface. During interactive resize, it can happen that the window ends
up completely offscreen after applying aspect ratio constraints.

This change prevents the window from ending up offscreen. It's possible
to do with unrestricted resize though.

BUG: 479547